deploy/hello/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: apps
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 8080
