deploy/hello/03-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hello.mycloud.com`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: apps
        - name: security-limits
          namespace: apps
      services:
        - name: hello
          port: 80
